# Efficiency-Tracker

./: .gitignore  README.md  main.py  pyproject.toml
config/: config.yaml
scripts/: com.efficiency-tracker.daily.plist  com.efficiency-tracker.weekly.plist  install_scheduler.py  uninstall_scheduler.py
src/: __init__.py  analyzer.py  collector.py  compare.py  notifier.py  processor.py  reporter.py
